fix: Data analysis overall style adjustment

--- a/ui/src/pages/DataAnalysis/index.less
+++ b/ui/src/pages/DataAnalysis/index.less
@@ -2,24 +2,24 @@
   display: flex;
   flex-direction: column;
   width: calc(100vw - 48px);
-  background-color: #1c1c1c;
+  // background-color: #1c1c1c;
   // transition: background-color 0.5s;
 
   .screeningRow {
     width: 100%;
-    height: 40px;
+    height: 45px;
     padding: 6px 41px;
     // background-color: #1c1c1c;
-    :global .ant-select:not(.ant-select-customize-input) .ant-select-selector {
-      color: #fff;
-      background-color: #1c1c1c;
-    }
+    // :global .ant-select:not(.ant-select-customize-input) .ant-select-selector {
+    //   color: #fff;
+    //   background-color: #1c1c1c;
+    // }
   }
   .contentBox {
     display: flex;
     .nav {
       width: 30px;
-      height: calc(100vh - 145px);
+      height: calc(100vh - 150px);
       padding-top: 10px;
       // background-color: #1c1c1c;
       .navItem {
@@ -37,17 +37,17 @@
 
     .content {
       flex: 1;
-      height: calc(100vh - 145px);
+      height: calc(100vh - 150px);
       overflow: hidden;
     }
   }
 }
 
-:global .ant-select-dropdown .ant-select-dropdown-placement-bottomLeft {
-  color: #fff;
-  background-color: #1c1c1c;
-}
+// :global .ant-select-dropdown .ant-select-dropdown-placement-bottomLeft {
+//   color: #fff;
+//   background-color: #1c1c1c;
+// }
 
-:global .ant-select-clear {
-  border-radius: 50%;
-}
+// :global .ant-select-clear {
+//   border-radius: 50%;
+// }
