--- a/ui/src/pages/DataAnalysis/OfflineManager/index.less
+++ b/ui/src/pages/DataAnalysis/OfflineManager/index.less
@@ -4,6 +4,9 @@
   display: flex;
   height: 100%;
   min-height: 0;
+  border-radius: 8px;
+  border: 1px solid @border-color;
+  overflow: hidden;
 
   .right {
     flex: 0 0 300px;
