--- a/ui/src/pages/DataAnalysis/RealTimeBusinessFlow/index.less
+++ b/ui/src/pages/DataAnalysis/RealTimeBusinessFlow/index.less
@@ -8,16 +8,16 @@
     flex: 0 0 300px;
     padding: 10px;
     border: 1px solid @border-color;
-    // border-radius: 8px;
+    border-radius: 8px;
     // background-color: #1c1c1c;
-    :global {
-      .ant-select-single,
-      .ant-select-selector,
-      .ant-select-selection-search-input {
-        color: #fff;
-        background-color: #1c1c1c;
-      }
-    }
+    // :global {
+    //   .ant-select-single,
+    //   .ant-select-selector,
+    //   .ant-select-selection-search-input {
+    //     color: #fff;
+    //     background-color: #1c1c1c;
+    //   }
+    // }
   }
 
   .businessEChart {
@@ -26,6 +26,7 @@
     max-height: calc(100vh - 140px);
     overflow: hidden;
     background-color: #fff;
-    //border-radius: 8px;
+    border-radius: 8px;
+    border: 1px solid @border-color;
   }
 }
