fix: Data analysis overall style adjustment

--- a/ui/src/pages/DataAnalysis/OfflineManager/index.less
+++ b/ui/src/pages/DataAnalysis/OfflineManager/index.less
@@ -4,15 +4,13 @@
   display: flex;
   height: 100%;
   min-height: 0;
-  border-radius: 8px;
-  border: 1px solid @border-color;
-  overflow: hidden;
 
   .right {
     flex: 0 0 300px;
     overflow-y: auto;
     font-size: 14px;
     border-right: 1px solid @border-color;
+    padding-top: 50px;
 
     .header {
       display: flex;
