feat(data analysis): add offline manger

--- a/ui/src/pages/DataLogs/styles/index.less
+++ b/ui/src/pages/DataLogs/styles/index.less
@@ -16,7 +16,7 @@
   .menuBtn {
     position: absolute;
     top: 50%;
-    left: -15px;
+    left: 0;
     display: flex;
     align-items: center;
     width: 12px;
@@ -31,7 +31,7 @@
   }
 
   .menuBtnCollapsed {
-    left: -8px;
+    left: 210px;
   }
 }
 
