--- a/ui/src/pages/DataAnalysis/OfflineManager/index.less
+++ b/ui/src/pages/DataAnalysis/OfflineManager/index.less
@@ -6,35 +6,47 @@
   min-height: 0;
 
   .right {
+    display: flex;
     flex: 0 0 300px;
     overflow-y: auto;
     font-size: 14px;
     border-right: 1px solid @border-color;
     padding-top: 50px;
 
-    .header {
+    .workflowMain {
       display: flex;
-      height: 28px;
-      padding: 2px 8px;
-      font-weight: bold;
-      line-height: 24px;
-      background: @primary-color-1;
-      cursor: default;
-      user-select: none;
-      .title {
-        flex: 1;
-        cursor: pointer;
-        .icon {
-          margin: 4px;
-          font-size: 10px;
-          transition: transform 0.5s;
-        }
-        .iconExpand {
-          transform: rotate(90deg);
+      flex: 1;
+      flex-direction: column;
+      min-height: 0;
+      .header {
+        display: flex;
+        flex: 0 0 28;
+        padding: 2px 8px;
+        font-weight: bold;
+        line-height: 24px;
+        background: @primary-color-1;
+        cursor: default;
+        user-select: none;
+        .title {
+          flex: 1;
+          cursor: pointer;
+          .icon {
+            margin: 4px;
+            font-size: 10px;
+            transition: transform 0.5s;
+          }
+          .iconExpand {
+            transform: rotate(90deg);
+          }
         }
       }
-    }
-    .workflowMain {
+      .workflowList {
+        flex: 1;
+        min-width: 0;
+        min-height: 0;
+        padding-left: 15px;
+        overflow-y: auto;
+      }
     }
   }
 }
