fix(data log): fold log error

--- a/ui/src/pages/DataLogs/components/RawLogTabs/index.less
+++ b/ui/src/pages/DataLogs/components/RawLogTabs/index.less
@@ -1,8 +1,8 @@
 .rawLogTabsMain {
-  display: flex;
-  flex: 1;
-  min-width: 0;
   position: relative;
+  display: flex;
+  width: 100%;
+  min-width: 0;
   .tabs {
     flex: 1;
     :global {
