--- a/ui/src/pages/DataAnalysis/index.less
+++ b/ui/src/pages/DataAnalysis/index.less
@@ -1,3 +1,4 @@
+@import "../../styles/var.less";
 .main {
   display: flex;
   flex-direction: column;
@@ -18,7 +19,7 @@
         left: 0px;
         width: 300px;
         height: 1px;
-        border-bottom: 1px solid #ccc;
+        border-bottom: 1px solid @border-color;
         content: "";
       }
     }
@@ -47,7 +48,7 @@
       flex: 1;
       height: calc(100vh - 104px);
       overflow: hidden;
-      border-left: 1px solid hsla(0, 0%, 0%, 0.1);
+      border-left: 1px solid @border-color;
 
       .defaultPage {
         padding-left: 300px;
@@ -64,7 +65,7 @@
           position: absolute;
           left: 300px;
           top: 0;
-          border-left: 1px solid hsla(0, 0%, 0%, 0.1);
+          border-left: 1px solid @border-color;
         }
       }
     }
