fix(data logs): fix style

--- a/ui/src/pages/DataLogs/components/DataSourceMenu/index.less
+++ b/ui/src/pages/DataLogs/components/DataSourceMenu/index.less
@@ -2,6 +2,7 @@
   position: relative;
   display: flex;
   flex-direction: column;
+  min-width: 200px;
   max-width: 400px;
   margin-right: 5px;
   padding: 5px;
