fix: Adjust the style of the right-click menu

--- a/ui/src/pages/DataAnalysis/components/FolderTree/index.less
+++ b/ui/src/pages/DataAnalysis/components/FolderTree/index.less
@@ -26,3 +26,8 @@
     display: inline-block;
   }
 }
+
+// 因为这个下拉菜单直接挂载在body上，所以不涉及以上的层级
+:global .ant-dropdown-menu  {
+  border: 1px solid #EE722E;
+}
