fix: Right-click menu style adjustment

--- a/ui/src/pages/DataAnalysis/components/FolderTree/index.less
+++ b/ui/src/pages/DataAnalysis/components/FolderTree/index.less
@@ -28,6 +28,6 @@
 }
 
 // 因为这个下拉菜单直接挂载在body上，所以不涉及以上的层级
-:global .ant-dropdown-menu  {
-  border: 1px solid #EE722E;
-}
+// :global .ant-dropdown-menu  {
+//   border: 1px solid #EE722E;
+// }
