fix(data analysis): add node1

--- a/ui/src/pages/DataAnalysis/OfflineManager/index.less
+++ b/ui/src/pages/DataAnalysis/OfflineManager/index.less
@@ -8,10 +8,10 @@
   .right {
     display: flex;
     flex: 0 0 300px;
+    padding-top: 50px;
     overflow-y: auto;
     font-size: 14px;
     border-right: 1px solid @border-color;
-    padding-top: 50px;
 
     .workflowMain {
       display: flex;
@@ -21,7 +21,7 @@
       .header {
         display: flex;
         flex: 0 0 28;
-        padding: 2px 8px;
+        padding: 2px 8px 2px 0px;
         font-weight: bold;
         line-height: 24px;
         background: @primary-color-1;
@@ -44,7 +44,6 @@
         flex: 1;
         min-width: 0;
         min-height: 0;
-        padding-left: 15px;
         overflow-y: auto;
       }
     }
