--- a/ui/src/pages/DataAnalysis/OfflineManager/index.less
+++ b/ui/src/pages/DataAnalysis/OfflineManager/index.less
@@ -18,6 +18,18 @@
       flex: 1;
       flex-direction: column;
       min-height: 0;
+      .navTitle {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        width: 100%;
+        height: 34px;
+        // margin: -10px -2px 3px;
+        margin: 0 8px;
+        color: #5c5c5c;
+        font-weight: 700;
+        font-size: 14px;
+      }
       .header {
         display: flex;
         flex: 0 0 28;
