--- a/ui/src/pages/DataAnalysis/RealTimeBusinessFlow/index.less
+++ b/ui/src/pages/DataAnalysis/RealTimeBusinessFlow/index.less
@@ -5,11 +5,22 @@
   height: 100%;
   .libraryTree {
     flex: 0 0 300px;
-    border-right: 1px solid @border-color;
     padding-top: 60px;
+    border-right: 1px solid @border-color;
     .libraryTreeForm {
-      padding: 0 10px 10px;
       width: 300px;
+      padding: 0 10px 10px;
+      .title {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        width: 100%;
+        height: 34px;
+        margin: -10px -2px 3px;
+        color: #5c5c5c;
+        font-weight: 700;
+        font-size: 14px;
+      }
     }
   }
 
