fix: Optimized for custom Collapse

--- a/ui/src/pages/DataAnalysis/OfflineManager/components/IntegratedConfiguration/CustomCollapse/index.less
+++ b/ui/src/pages/DataAnalysis/OfflineManager/components/IntegratedConfiguration/CustomCollapse/index.less
@@ -5,10 +5,18 @@
   padding: 0 20px;
   .titleBox {
     display: flex;
-    background-color: #f8c3a6;
     overflow: hidden;
+    background-color: #f8c3a6;
     border-radius: 2px;
     cursor: pointer;
+
+    .titleIconOpen {
+      animation: rotatingOpen 0.5s forwards;
+    }
+    .titleIconClose {
+      transform: rotate(90deg);
+      animation: rotatingClose 0.5s forwards;
+    }
 
     .title {
       padding: 0 10px;
@@ -19,4 +27,22 @@
   }
   .content {
   }
+}
+
+@keyframes rotatingOpen {
+  0% {
+    transform: rotate(0);
+  }
+  100% {
+    transform: rotate(90deg);
+  }
+}
+
+@keyframes rotatingClose {
+    0% {
+        transform: rotate(90deg);
+    }
+    100% {
+      transform: rotate(0);
+    }
 }
