--- a/ui/src/pages/DataAnalysis/index.less
+++ b/ui/src/pages/DataAnalysis/index.less
@@ -1,14 +1,14 @@
 @import "../../styles/var.less";
 .main {
+  position: relative;
   display: flex;
   flex-direction: column;
   width: calc(100vw - 48px);
-  position: relative;
 
   .positionBox {
     position: absolute;
-    left: 51px;
     top: 0px;
+    left: 51px;
     width: 300px;
     .screeningRow {
       position: relative;
@@ -51,21 +51,21 @@
       border-left: 1px solid @border-color;
 
       .defaultPage {
-        padding-left: 300px;
+        position: relative;
+        display: flex;
+        align-items: center;
+        justify-content: center;
         width: 100%;
         height: 100%;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        position: relative;
+        padding-left: 300px;
         &::before {
-          content: '';
+          position: absolute;
+          top: 0;
+          left: 300px;
           width: 1px;
           height: 100%;
-          position: absolute;
-          left: 300px;
-          top: 0;
           border-left: 1px solid @border-color;
+          content: "";
         }
       }
     }
