--- a/ui/src/pages/DataAnalysis/components/FileTitle/index.less
+++ b/ui/src/pages/DataAnalysis/components/FileTitle/index.less
@@ -1,11 +1,24 @@
+@import "../../../../styles/var";
+
 .fileTitle {
   display: flex;
   align-items: center;
   width: 100%;
-  height: 32px;
+  height: 40px;
   padding-left: 20px;
   color: hsl(0, 0%, 58%);
-  background: hsl(0, 0%, 96%);
+  border-bottom: 1px solid @border-color;
   .name {
+    flex: 0;
+    color: @font-bord-color;
+    font-weight: bold;
+  }
+
+  .status {
+    flex: 1;
+    text-align: center;
+  }
+  .icons {
+    flex: 0;
   }
 }
