--- a/ui/src/pages/DataAnalysis/components/SQLEditor/index.less
+++ b/ui/src/pages/DataAnalysis/components/SQLEditor/index.less
@@ -10,6 +10,10 @@
     .header {
       flex: 0 0 32px;
       padding-left: 56px;
+      padding-right: 20px;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
       .headerList {
         display: flex;
         align-items: center;
