--- a/ui/src/pages/DataAnalysis/OfflineManager/components/IntegratedConfiguration/index.less
+++ b/ui/src/pages/DataAnalysis/OfflineManager/components/IntegratedConfiguration/index.less
@@ -6,6 +6,8 @@
       height: 100%;
     }
     .ant-spin-nested-loading .ant-spin-container {
+      display: flex;
+      flex-direction: column;
       height: 100%;
     }
   }
