--- a/ui/src/pages/DataAnalysis/components/SQLEditor/index.less
+++ b/ui/src/pages/DataAnalysis/components/SQLEditor/index.less
@@ -1,42 +1,51 @@
 @import "../../../../styles/var.less";
-  .editorMain {
+.editorMain {
+  display: flex;
+  flex: 1;
+  flex-direction: column;
+  height: 100%;
+  color: hsl(0, 0%, 58%);
+  background: hsl(0, 0%, 96%);
+  border-left: 1px solid @border-color;
+
+  .spin {
     display: flex;
-    flex: 1;
-    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
     height: 100%;
-    color: hsl(0, 0%, 58%);
-    background: hsl(0, 0%, 96%);
-    border-left: 1px solid @border-color;
-    .header {
-      flex: 0 0 32px;
-      padding-left: 56px;
-      padding-right: 20px;
+  }
+
+  .header {
+    display: flex;
+    flex: 0 0 32px;
+    align-items: center;
+    justify-content: space-between;
+    padding-right: 20px;
+    padding-left: 56px;
+    .headerList {
       display: flex;
-      justify-content: space-between;
       align-items: center;
-      .headerList {
-        display: flex;
-        align-items: center;
-        .headerTitleTips {
-          position: relative;
-          padding-left: 10px;
-          &::before {
-            position: absolute;
-            top: 50%;
-            left: 0;
-            width: 7px;
-            height: 7px;
-            background-color: #3c3c3c;
-            border-radius: 50%;
-            transform: translateY(-50%);
-            content: "";
-          }
+      .headerTitleTips {
+        position: relative;
+        padding-left: 10px;
+        &::before {
+          position: absolute;
+          top: 50%;
+          left: 0;
+          width: 7px;
+          height: 7px;
+          background-color: #3c3c3c;
+          border-radius: 50%;
+          transform: translateY(-50%);
+          content: "";
         }
       }
     }
-    .context {
-      flex: 1;
-      height: 100%;
-      background-color: #ccc;
-    }
   }
+  .context {
+    flex: 1;
+    height: 100%;
+    background-color: #ccc;
+  }
+}
