--- a/ui/src/pages/DataAnalysis/OfflineManager/components/WorkflowBoard/NodeManage/styles/index.less
+++ b/ui/src/pages/DataAnalysis/OfflineManager/components/WorkflowBoard/NodeManage/styles/index.less
@@ -24,6 +24,7 @@
     line-height: 30px;
     text-align: center;
     border: 1px solid @border-color;
+    border-radius: 4px;
     cursor: pointer;
     user-select: none;
   }
