fix(workflow): change status

--- a/ui/src/pages/DataAnalysis/components/FileTitle/index.less
+++ b/ui/src/pages/DataAnalysis/components/FileTitle/index.less
@@ -27,9 +27,13 @@
       transform: translateY(-50%);
       content: "";
     }
+    .nodeStatus {
+      flex: 0;
+      font-size: 14px;
+    }
   }
 
-  .status {
+  .userStatus {
     flex: 1;
     text-align: center;
   }
