--- a/ui/src/pages/DataAnalysis/RealTimeBusinessFlow/components/BusinessChart/styles/index.less
+++ b/ui/src/pages/DataAnalysis/RealTimeBusinessFlow/components/BusinessChart/styles/index.less
@@ -58,3 +58,34 @@
     max-width: 250px;
   }
 }
+
+.validationflow .react-flow__node {
+  width: 150px;
+  padding: 10px;
+  color: #555;
+  font-size: 12px;
+  text-align: center;
+  border: 1px solid #ddd;
+  border-radius: 5px;
+}
+
+.validationflow .react-flow__node-customnode {
+  background: #e6e6e9;
+  border: 1px solid #ddd;
+}
+
+.react-flow__node-custominput .react-flow__handle {
+  background: #e6e6e9;
+}
+
+.validationflow .react-flow__node-custominput {
+  background: #fff;
+}
+
+.validationflow .react-flow__handle-connecting {
+  background: #ff6060;
+}
+
+.validationflow .react-flow__handle-valid {
+  background: #55dd99;
+}
