--- a/ui/src/pages/DataAnalysis/OfflineManager/index.less
+++ b/ui/src/pages/DataAnalysis/OfflineManager/index.less
@@ -25,7 +25,7 @@
         width: 100%;
         height: 34px;
         // margin: -10px -2px 3px;
-        margin: 0 8px;
+        padding: 0 8px;
         color: #5c5c5c;
         font-weight: 700;
         font-size: 14px;
