--- a/ui/src/pages/DataAnalysis/components/FileTitle/index.less
+++ b/ui/src/pages/DataAnalysis/components/FileTitle/index.less
@@ -5,8 +5,9 @@
   align-items: center;
   width: 100%;
   height: 40px;
-  padding-left: 20px;
+  padding: 0 10px;
   color: hsl(0, 0%, 58%);
+  line-height: 40px;
   border-bottom: 1px solid @border-color;
   .name {
     flex: 0;
@@ -18,10 +19,10 @@
     padding-left: 10px;
     &::before {
       position: absolute;
-      top: calc(50% + 1px);
       left: 0;
       width: 7px;
       height: 7px;
+      margin: auto 4px;
       background-color: @font-bord-color;
       border-radius: 50%;
       transform: translateY(-50%);
@@ -38,6 +39,8 @@
     text-align: center;
   }
   .icons {
+    display: flex;
     flex: 0;
+    align-items: center;
   }
 }
