fix(realtime): option file title

--- a/ui/src/pages/DataAnalysis/components/FileTitle/index.less
+++ b/ui/src/pages/DataAnalysis/components/FileTitle/index.less
@@ -16,7 +16,7 @@
   }
   .nameChange {
     position: relative;
-    padding-left: 10px;
+    padding: 0 10px;
     &::before {
       position: absolute;
       left: 0;
