feat: Luckysheet Replaces the table

--- a/ui/src/pages/DataAnalysis/components/FileTitle/index.less
+++ b/ui/src/pages/DataAnalysis/components/FileTitle/index.less
@@ -30,6 +30,10 @@
       font-size: 14px;
     }
   }
+  .statusText {
+    display: inline-block;
+    margin-left: 10px;
+  }
 
   .userStatus {
     flex: 1;
