--- a/ui/src/pages/document.ejs
+++ b/ui/src/pages/document.ejs
@@ -11,6 +11,14 @@
     <meta name="author" content="@clickvisual">
     <title>ClickVisual</title>
     <link rel="icon" href="<%= context.config.publicPath + 'cv.png'%>" type="image/x-icon" />
+
+    <!-- Luckysheet -->
+    <link rel='stylesheet' href='https://cdn.jsdelivr.net/npm/luckysheet@2.0.0/dist/plugins/css/pluginsCss.css' />
+    <link rel='stylesheet' href='https://cdn.jsdelivr.net/npm/luckysheet@2.0.0/dist/plugins/plugins.css' />
+    <link rel='stylesheet' href='https://cdn.jsdelivr.net/npm/luckysheet@2.0.0/dist/css/luckysheet.css' />
+    <script crossorigin src="https://cdn.jsdelivr.net/npm/luckysheet@2.0.0/dist/plugins/js/plugin.js"></script>
+    <script crossorigin src="https://cdn.jsdelivr.net/npm/luckysheet@2.0.0/dist/luckysheet.umd.js"></script>
+
   </head>
   <body>
     <div id="root">
