--- a/ui/src/pages/DataAnalysis/components/RightMenu/Scheduling/index.less
+++ b/ui/src/pages/DataAnalysis/components/RightMenu/Scheduling/index.less
@@ -1,6 +1,6 @@
 .drawer {
   .basicInfo {
-    padding: 0 0 0 30px;
+    padding: 10px 0 0 30px;
     .infoItem {
       display: flex;
       margin-bottom: 20px;
