fix: Data integration click do not update run results

--- a/ui/src/pages/DataAnalysis/components/RightMenu/Scheduling/CustomCollapse/index.less
+++ b/ui/src/pages/DataAnalysis/components/RightMenu/Scheduling/CustomCollapse/index.less
@@ -1,8 +1,8 @@
 .CustomCollapse {
   display: flex;
   flex-direction: column;
-  margin-top: 20px;
-  padding: 0 20px;
+  margin-bottom: 10px;
+
   .titleBox {
     display: flex;
     overflow: hidden;
