feat: Double-click kanban to open the file

--- a/ui/src/pages/DataAnalysis/index.less
+++ b/ui/src/pages/DataAnalysis/index.less
@@ -4,6 +4,7 @@
   display: flex;
   flex-direction: column;
   width: calc(100vw - 48px);
+  overflow: hidden;
 
   .positionBox {
     position: absolute;
