feat: Alarm interaction optimization

--- a/ui/src/components/JsonView/index.less
+++ b/ui/src/components/JsonView/index.less
@@ -42,14 +42,18 @@
 }
 
 .hiddenButton {
-  height: 18px;
-  align-items: center;
   display: inline-flex;
+  align-items: center;
+  height: 18px;
   margin-right: 5px;
 }
 
 .pre {
   margin: 0;
+  font-size: 14px;
+  font-family: "-apple-system", "BlinkMacSystemFont", "PingFang SC", "Helvetica",
+    "Tahoma", "Arial", "Microsoft YaHei", "微软雅黑", "黑体", "Heiti",
+    "sans-serif", "SimSun", "宋体", "serif";
   white-space: pre-wrap;
 }
 
