--- a/ui/src/pages/DataLogs/components/QueryResult/Content/RawLog/RawLogsIndexes/IndexItem/index.less
+++ b/ui/src/pages/DataLogs/components/QueryResult/Content/RawLog/RawLogsIndexes/IndexItem/index.less
@@ -3,9 +3,10 @@
   border-bottom: 1px solid hsla(0, 0%, 0%, 0.1);
   .detailContextMain {
     flex: 1;
-    width: 178px;
-    padding: 10px;
+    width: 164px;
+    padding: 10px 1px 10px 10px;
     background: #f5f5f5;
+    overflow: overlay;
     .context {
       display: flex;
       flex-direction: column;
@@ -36,12 +37,13 @@
         display: flex;
         width: 100%;
         .progress {
-          flex: 0 0 70%;
+          // flex: 0 0 70%;
+          width: 70%;
         }
         .percent {
           flex: 1;
           margin-left: 8px;
-          text-align: left;
+          text-align: right;
         }
       }
     }
