feat: Data analysis style changes: Added file tabs

--- a/ui/src/pages/DataAnalysis/OfflineManager/components/IntegratedConfiguration/index.less
+++ b/ui/src/pages/DataAnalysis/OfflineManager/components/IntegratedConfiguration/index.less
@@ -1,6 +1,7 @@
 .integratedConfigMain {
   flex: 1;
   min-height: 0;
+  height: 100%;
   :global {
     .ant-spin-nested-loading {
       height: 100%;
