--- a/ui/src/pages/DataAnalysis/components/SQLEditor/index.less
+++ b/ui/src/pages/DataAnalysis/components/SQLEditor/index.less
@@ -3,7 +3,7 @@
   display: flex;
   flex: 1;
   flex-direction: column;
-  height: 100%;
+  height: calc(100vh - 137px);
   color: hsl(0, 0%, 58%);
   border-left: 1px solid @border-color;
 
