feat: Temporarily query TAB modification, Data development is broken

--- a/ui/src/pages/DataAnalysis/TemporaryQuery/index.less
+++ b/ui/src/pages/DataAnalysis/TemporaryQuery/index.less
@@ -77,6 +77,8 @@
     flex: 1;
     flex-direction: column;
     height: 100%;
+    border-left: 1px solid @border-color;
+    overflow: hidden;
 
     .fileNameList {
       width: 100%;
@@ -88,6 +90,14 @@
       justify-content: center;
       height: calc(100vh - 137px);
       overflow-y: scroll;
+    }
+
+    .empty {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      width: 100%;
+      height: 100%;
     }
 
     :global .ant-tabs-card > .ant-tabs-nav .ant-tabs-tab {
