--- a/ui/src/pages/DataAnalysis/TemporaryQuery/components/FolderTree/index.less
+++ b/ui/src/pages/DataAnalysis/TemporaryQuery/components/FolderTree/index.less
@@ -25,6 +25,21 @@
   :global .ant-dropdown-trigger {
     display: inline-block;
   }
+
+  :global .ant-tree .ant-tree-node-content-wrapper {
+    line-height: 22px;
+  }
+
+  :global .ant-tree-title {
+    width: 100%;
+    display: flex;
+    align-items: center;
+  }
+
+  :global .ant-tree-node-content-wrapper-normal {
+    display: flex;
+    align-items: center;
+  }
 }
 
 // 因为这个下拉菜单直接挂载在body上，所以不涉及以上的层级
