feat: SQL TAB for data development

--- a/ui/src/pages/DataAnalysis/TemporaryQuery/components/FolderTree/index.less
+++ b/ui/src/pages/DataAnalysis/TemporaryQuery/components/FolderTree/index.less
@@ -40,6 +40,10 @@
     display: flex;
     align-items: center;
   }
+
+  :global .ant-tree-node-content-wrapper-open {
+    display: flex;
+  }
 }
 
 // 因为这个下拉菜单直接挂载在body上，所以不涉及以上的层级
