--- a/ui/src/pages/DataLogs/components/QueryResult/Content/RawLog/RawLogsIndexes/IndexHeader/index.less
+++ b/ui/src/pages/DataLogs/components/QueryResult/Content/RawLog/RawLogsIndexes/IndexHeader/index.less
@@ -3,7 +3,7 @@
   flex: 0 0 28px;
   align-items: center;
   justify-content: space-between;
-  padding: 5px 5px 0 5px;
+  padding: 5px;
   .title {
     font-weight: bold;
     font-size: 14px;
