--- a/ui/src/pages/DataAnalysis/OfflineManager/index.less
+++ b/ui/src/pages/DataAnalysis/OfflineManager/index.less
@@ -73,10 +73,26 @@
 
     .contentMain {
       display: flex;
-      justify-content: center;
       align-items: center;
+      justify-content: center;
       height: calc(100vh - 137px);
       overflow-y: scroll;
+    }
+
+    .luckysheet {
+      position: relative;
+      top: calc(-40vh + 32px + 32px);
+      z-index: 10;
+      width: calc(100% - 32px);
+      height: calc(40vh - 32px - 32px);
+    }
+
+    .empty {
+      width: 100%;
+      height: 100%;
+      display: flex;
+      justify-content: center;
+      align-items: center;
     }
 
     :global .ant-tabs-card > .ant-tabs-nav .ant-tabs-tab {
