--- a/ui/src/pages/DataLogs/components/DataSourceMenu/index.less
+++ b/ui/src/pages/DataLogs/components/DataSourceMenu/index.less
@@ -6,7 +6,8 @@
   max-width: 400px;
   margin-right: 5px;
   padding: 5px;
-  background: #fff;
+  // background: #fff;
+  background: hsla(0, 0%, 92%, 0.3);
   border-radius: 8px;
 
   :global .ant-tree-indent-unit {
@@ -41,9 +42,7 @@
   scrollbar-width: none; /* Firefox */
   -ms-overflow-style: none; /* IE 10+ */
   ::-webkit-scrollbar {
-
     display: none; /* Chrome Safari */
-  
   }
 
   // .treeTitle {
