--- a/ui/src/pages/DataLogs/styles/index.less
+++ b/ui/src/pages/DataLogs/styles/index.less
@@ -4,7 +4,7 @@
   display: flex;
   width: 100%;
   height: 100%;
-  padding: 10px 15px;
+  padding: 10px;
 }
 .siteDrawerInCurrentWrapper {
   background: hsl(0, 0, 98%);
