feat: The original query is formatted by default

--- a/ui/src/pages/DataLogs/components/QueryResult/Content/RawLog/RawLogList/LogItem/index.less
+++ b/ui/src/pages/DataLogs/components/QueryResult/Content/RawLog/RawLogList/LogItem/index.less
@@ -1,7 +1,7 @@
 @import "../../../../../../../../styles/var.less";
 .logItemMain {
   display: flex;
-  padding: 10px 13px;
+  padding: 10px 13px 10px 0;
   .left {
     display: flex;
     flex: 0 0 170px;
@@ -10,6 +10,12 @@
     //.logIndex {
     //  flex: 0 0 40px;
     //}
+    .flexBox {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 16px;
+    }
     .dateTime {
       flex: 1;
       padding-right: 5px;
