style: Firefox Style Adjustment

--- a/ui/src/components/CustomTree/index.less
+++ b/ui/src/components/CustomTree/index.less
@@ -13,6 +13,12 @@
     .ant-dropdown-trigger {
       display: inline-block;
     }
+
+    // .ant-tree-title {
+    //   overflow: hidden;
+    //   white-space: nowrap;
+    //   text-overflow: ellipsis;
+    // }
   }
   //// 树状组件搜索关键字颜色
   //:global .site-tree-search-value {
