--- a/ui/src/pages/DataAnalysis/OfflineManager/index.less
+++ b/ui/src/pages/DataAnalysis/OfflineManager/index.less
@@ -18,6 +18,7 @@
       flex: 1;
       flex-direction: column;
       min-height: 0;
+      width: 299px;
       .navTitle {
         display: flex;
         align-items: center;
@@ -57,6 +58,7 @@
         min-width: 0;
         min-height: 0;
         overflow-y: auto;
+        overflow-x: hidden;
       }
     }
   }
