feat: Supports any collection configuration in JSON format

--- a/ui/src/pages/DataAnalysis/OfflineManager/index.less
+++ b/ui/src/pages/DataAnalysis/OfflineManager/index.less
@@ -8,6 +8,7 @@
   .right {
     display: flex;
     flex: 0 0 300px;
+    width: 300px;
     padding-top: 50px;
     overflow-y: auto;
     font-size: 14px;
