--- a/ui/src/pages/DataAnalysis/TemporaryQuery/index.less
+++ b/ui/src/pages/DataAnalysis/TemporaryQuery/index.less
@@ -9,6 +9,7 @@
     display: flex;
     flex: 0 0 300px;
     flex-direction: column;
+    width: 300px;
     padding-top: 50px;
     color: #abb2bf;
 
