feat: Added the update time field in the topology

--- a/ui/src/pages/DataAnalysis/RealTimeBusinessFlow/index.less
+++ b/ui/src/pages/DataAnalysis/RealTimeBusinessFlow/index.less
@@ -31,5 +31,16 @@
     overflow: hidden;
     background-color: #fff;
     border-radius: 8px;
+    .fixedBox {
+      position: fixed;
+      top: 100px;
+      right: 100px;
+      z-index: 1000;
+      background-color: #2FABEE;
+      color: #fff;
+      padding: 10px;
+      border-radius: 4px;
+      transition: all 1s;
+    }
   }
 }
