--- a/ui/src/pages/DataLogs/components/QueryResult/Content/RawLog/RawLogsOperations/index.less
+++ b/ui/src/pages/DataLogs/components/QueryResult/Content/RawLog/RawLogsOperations/index.less
@@ -9,12 +9,12 @@
   border-bottom: 1px solid @border-color;
 
   .operationsBtn {
-    font-size: 16px;
+    font-size: 14px;
     .tableBtn {
       cursor: pointer;
     }
   }
   .pagination {
-    user-select: none;
+    user-select: text;
   }
 }
