feat: An error prompt

--- a/ui/src/pages/DataLogs/components/QueryResult/Content/RawLog/HighCharts/index.less
+++ b/ui/src/pages/DataLogs/components/QueryResult/Content/RawLog/HighCharts/index.less
@@ -7,7 +7,8 @@
   }
 }
 .highCartMainHidden {
-  content-visibility: hidden;
+  // content-visibility: hidden;
+  z-index: -1;
 }
 
 .highCartToolTip {
