--- a/ui/src/pages/DataLogs/components/DataSourceMenu/ModalCreatedLogLibrary/NewTable/index.less
+++ b/ui/src/pages/DataLogs/components/DataSourceMenu/ModalCreatedLogLibrary/NewTable/index.less
@@ -2,6 +2,12 @@
     display: flex;
     // align-items: center;
     .sourceButton {
+        margin-bottom: 8px;
+    }
+    .buttonBox {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
         margin-left: 8px;
     }
 }
