feat(log): Removes scrolling hidden histograms

--- a/ui/src/pages/DataLogs/components/QueryResult/index.less
+++ b/ui/src/pages/DataLogs/components/QueryResult/index.less
@@ -46,7 +46,7 @@
       }
       .highChartsHidden {
         flex: 0 0 0;
-        overflow: hidden;
+        content-visibility: hidden;
       }
       .logs {
         flex: 1;
