--- a/ui/src/components/BreadCrumbs/index.less
+++ b/ui/src/components/BreadCrumbs/index.less
@@ -1,6 +1,6 @@
 .nameSpan {
     display: inline-block;
-    width: 115px;
+    max-width: 115px;
     overflow: hidden;
     text-overflow: ellipsis;
     white-space:nowrap;
