fix: Log indexs error

--- a/ui/src/pages/DataLogs/components/RawLogTabs/index.less
+++ b/ui/src/pages/DataLogs/components/RawLogTabs/index.less
@@ -13,4 +13,11 @@
       }
     }
   }
+
+  // :global .ant-tabs-tab-btn {
+  //   width: 100px;
+  //   overflow: hidden;
+  //   text-overflow: ellipsis;
+  //   white-space: nowrap;
+  // }
 }
