feat: Jaeger_json links are supported

--- a/ui/src/pages/DataLogs/components/QueryResult/Content/RawLog/RawLogList/index.less
+++ b/ui/src/pages/DataLogs/components/QueryResult/Content/RawLog/RawLogList/index.less
@@ -2,6 +2,7 @@
   flex: 1;
   margin-top: 5px;
   overflow-y: auto;
+  overflow-x: hidden;
   & > div:not(:last-child) {
     border-bottom: 1px solid hsla(0, 0%, 0%, 0.1);
   }
