--- a/ui/src/pages/DataLogs/components/RawLogTabs/index.less
+++ b/ui/src/pages/DataLogs/components/RawLogTabs/index.less
@@ -3,7 +3,8 @@
   display: flex;
   width: 100%;
   min-width: 0;
-  overflow-x: scroll;
+  // overflow-x: scroll;
+  overflow: hidden;
   .tabs {
     flex: 1;
     :global {
