--- a/ui/src/pages/DataLogs/components/DataSourceMenu/LogLibraryList/index.less
+++ b/ui/src/pages/DataLogs/components/DataSourceMenu/LogLibraryList/index.less
@@ -17,7 +17,7 @@
         white-space: nowrap;
         text-overflow: ellipsis;
         user-select: none;
-        padding-right: 20px;
+        // padding-right: 0px;
       }
 
       .icon {
