--- a/ui/src/pages/DataLogs/components/QueryResult/Content/RawLog/RawLogsOperations/SwitchLeft/index.less
+++ b/ui/src/pages/DataLogs/components/QueryResult/Content/RawLog/RawLogsOperations/SwitchLeft/index.less
@@ -1,3 +1,63 @@
 .title {
+  font-size: 12px;
+  margin-left: 8px;
   cursor: pointer;
+}
+
+.flexBox {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  .FoldingExpansionSwitch {
+    position: relative;
+    display: flex;
+    width: 42px;
+    height: 16px;
+    background: linear-gradient(
+        to right,
+        rgba(0, 0, 0, 0.25),
+        rgba(0, 0, 0, 0.25)
+      ),
+      linear-gradient(to right, #fff, #fff);
+    border-radius: 30px;
+    box-shadow: inset 0 0 1px rgb(0 0 0 / 25%);
+    transform: translateY(1px);
+    transition: all 0.3s;
+
+    .jtogglerBtnWrapper {
+      display: flex;
+      width: 33.33%;
+      height: 100%;
+      cursor: pointer;
+    }
+
+    .jtogglerHandle {
+      position: absolute;
+      top: 2px;
+      left: 2px;
+      display: block;
+      width: 12px;
+      height: 12px;
+      background: #fff;
+      border-radius: 50%;
+      box-shadow: 0 2px 4px 0 rgb(0 35 11 / 20%);
+      transition: left 0.3s;
+    }
+  }
+  .bg_blue {
+    background: #2fabee;
+  }
+}
+
+.themeColor {
+  background: hsl(21, 85%, 56%) !important;
+}
+
+.textSpan {
+  display: inline-block;
+  margin-left: 4px;
+  font-size: 12px;
+  line-height: 14px;
+  text-align: center;
 }
