feat: Link time formatting

--- a/ui/src/pages/DataLogs/components/QueryResult/Content/RawLog/RawLogList/LinkItemTitle/ProgressBar/index.less
+++ b/ui/src/pages/DataLogs/components/QueryResult/Content/RawLog/RawLogList/LinkItemTitle/ProgressBar/index.less
@@ -4,6 +4,7 @@
   margin-top: 6px;
   background: rgba(40, 154, 233, 0.4);
   border-radius: 3px;
+  z-index: 10;
 
   &::before {
     position: absolute;
